# all-labs

./: CMakeLists.txt  Iterator_For_Array.h  Iterator_For_Map.h  L1_ANSI.txt  Source.asm  Visitor_For_Figures.h  WinApi - lab 2.sln  WinApi - lab1.sln  bidirectional_list_on_array.h  buffered_channel.h  file_reader.h  float.asm  fraction_class.cpp  fraction_class.h  functions.h  input.txt  lab 2 - sem2.cpp  lab 4 - asm.cpp  lab 5 - asm.cpp  lab 5.cpp  lab 6.cpp  lab7.cpp  main.cpp  miltiplication.cpp  module1.asm  module2.asm  multiplication.h  new_text  origin  sem2 - lab1 - proga.cpp  sentence.txt  six words  stack.cpp  stack.h  students.cpp  students.h  task 1 - 4.cpp  task 2 - 4 - attempt 2.cpp  task 2 - 4 - first attempt.cpp  tests - lab 6.cpp  (+5 more)
Debug/: GameOfLife.ilk  WinApi - lab 2.ilk  WinApi - lab1.ilk
GameOfLife/: GameOfLife.aps  GameOfLife.cpp
GameOfLife/Debug/: GameOfLife.exe.recipe  vc142.idb
LibraryApp/: LibraryApp.sln
LibraryApp/LibraryApp/: LibraryApp.cpp  LibraryApp.vcxproj  LibraryApp.vcxproj.filters
StaticNumber/: StaticNumber.sln
StaticNumber/Number/: Number.h  Number.vcxproj  Number.vcxproj.filters  Source.cpp
StaticNumber/example_for_nums/: example_for_nums.cpp  (+2 more)
Vector/: Vector.sln
WinApi - lab 2/: WinApi - lab 2.aps  WinApi - lab 2.cpp  WinApi - lab 2.rc  WinApi - lab 2.vcxproj  WinApi - lab 2.vcxproj.filters  resource.h
WinApi - lab1/: Resource.h  WinApi - lab1.cpp  WinApi - lab1.rc  WinApi - lab1.vcxproj  WinApi - lab1.vcxproj.filters
task 1/: CMakeLists.txt
task 2/: CMakeLists.txt
task 2 - second attempt/: CMakeLists.txt
(+62 files in other folders)
